# test-bazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  stamping.go
testapp/: testapp.go
tools/: bazel  bazel.rc  expose_stamping_attributes.sh
